--- a/concourse/tasks/validate-version.yaml
+++ b/concourse/tasks/validate-version.yaml
@@ -15,4 +15,4 @@ run:
   args:
   - -exc
   - |
-    [[ ((.:package-version)) == $(/versiongenerator --token-file-path=token/token.txt --org=GoogleCloudPlatform --repo=((repo-name))) ]]
+    [[ ((version)) == $(/versiongenerator --token-file-path=token/token.txt --org=GoogleCloudPlatform --repo=((repo-name))) ]]
