--- a/concourse/pipeline/guest-package-build.yaml
+++ b/concourse/pipeline/guest-package-build.yaml
@@ -38,30 +38,30 @@ jobs:
   - get: guest-test-infra
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: generate-date
-    file: guest-test-infra/concourse/tasks/generate-date.yaml
-  - load_var: date
-    file: date/date
-  - task: guest-package-build-guest-agent
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: timestamp
+    file: timestamp/timestamp
+  - task: guest-agent-integration-test
     file: guest-test-infra/concourse/tasks/package-gointegtest.yaml
     vars:
       repo-name: "guest-agent"
-      date: ((date))
+      timestamp: ((.:timestamp))
 - name: osconfig-integration-test
   plan:
   - get: osconfig
   - get: guest-test-infra
   - task: get-credential
     file: guest-test-infra/concourse/tasks/get-credential.yaml
-  - task: generate-date
-    file: guest-test-infra/concourse/tasks/generate-date.yaml
-  - load_var: date
-    file: date/date
-  - task: guest-package-build-osconfig
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: timestamp
+    file: timestamp/timestamp
+  - task: osconfig-integration-test
     file: guest-test-infra/concourse/tasks/package-gointegtest.yaml
     vars:
       repo-name: "osconfig"
-      date: ((date))
+      timestamp: ((.:timestamp))
 
 - name: build-guest-agent
   plan:
