--- a/concourse/pipelines/linux-image-build.yaml
+++ b/concourse/pipelines/linux-image-build.yaml
@@ -37,7 +37,7 @@ resources:
     bucket: gce-image-archive
     json_key: |
       ((gcs-key.credential))
-    regexp: "centos/centos-stream-v([0-9]+).tar.gz"
+    regexp: "centos/centos-stream-8-v([0-9]+).tar.gz"
 # rhel
 - name: rhel-7-gcs
   type: gcs
@@ -131,7 +131,7 @@ jobs:
   - task: daisy-build-centos-7
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/centos_7_uefi.wf.json"
+      wf: "enterprise_linux/centos_7.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.centos-7))
       google_cloud_repo: "stable"
@@ -160,7 +160,7 @@ jobs:
   - task: daisy-build-centos-8
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/centos_8_uefi.wf.json"
+      wf: "enterprise_linux/centos_8.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.centos-8))
       google_cloud_repo: "stable"
@@ -172,7 +172,7 @@ jobs:
   - task: generate-build-id
     file: guest-test-infra/concourse/tasks/generate-build-id.yaml
     vars:
-      prefix: "centos-stream"
+      prefix: "centos-stream-8"
   - put: centos-stream-gcs
     params:
       file: build-id-dir/centos-stream*
@@ -189,7 +189,7 @@ jobs:
   - task: daisy-build-centos-stream
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/centos_stream.wf.json"
+      wf: "enterprise_linux/centos_stream_8.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.centos-stream))
       google_cloud_repo: "stable"
@@ -219,7 +219,7 @@ jobs:
   - task: daisy-build-rhel-7
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/rhel_7_uefi.wf.json"
+      wf: "enterprise_linux/rhel_7.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.rhel-7))
       google_cloud_repo: "stable"
@@ -248,7 +248,7 @@ jobs:
   - task: daisy-build-rhel-8
     file: guest-test-infra/concourse/tasks/daisy-build-images.yaml
     vars:
-      wf: "enterprise_linux/rhel_8_uefi.wf.json"
+      wf: "enterprise_linux/rhel_8.wf.json"
       gcs_url: ((.:gcs-url))
       iso: ((iso-paths.rhel-8))
       google_cloud_repo: "stable"
@@ -481,7 +481,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "test"
 - name: publish-to-testing-centos-8
   plan:
@@ -506,7 +506,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
+      wf: "enterprise_linux/centos_8.publish.json"
       environment: "test"
 - name: publish-to-testing-centos-stream
   plan:
@@ -531,7 +531,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_stream.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "test"
 # rhel
 - name: publish-to-testing-rhel-7
@@ -557,7 +557,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "test"
 - name: publish-to-testing-rhel-8
   plan:
@@ -582,7 +582,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "test"
 - name: publish-to-testing-rhel-7-4-sap
   plan:
@@ -785,7 +785,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "staging"
 - name: publish-to-staging-centos-8
   plan:
@@ -810,7 +810,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
+      wf: "enterprise_linux/centos_8.publish.json"
       environment: "staging"
 - name: publish-to-staging-centos-stream
   plan:
@@ -835,7 +835,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_stream.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "staging"
 # rhel
 - name: publish-to-staging-rhel-7
@@ -861,7 +861,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "staging"
 - name: publish-to-staging-rhel-8
   plan:
@@ -886,7 +886,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "staging"
 - name: publish-to-staging-rhel-7-4-sap
   plan:
@@ -1089,7 +1089,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_7_uefi.publish.json"
+      wf: "enterprise_linux/centos_7.publish.json"
       environment: "prod"
 - name: publish-to-prod-centos-8
   plan:
@@ -1113,7 +1113,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_8_uefi.publish.json"
+      wf: "enterprise_linux/centos_8.publish.json"
       environment: "prod"
 - name: publish-to-prod-centos-stream
   plan:
@@ -1137,7 +1137,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/centos"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/centos_stream.publish.json"
+      wf: "enterprise_linux/centos_stream_8.publish.json"
       environment: "prod"
 # rhel
 - name: publish-to-prod-rhel-7
@@ -1163,7 +1163,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_7_uefi.publish.json"
+      wf: "enterprise_linux/rhel_7.publish.json"
       environment: "prod"
 - name: publish-to-prod-rhel-8
   plan:
@@ -1188,7 +1188,7 @@ jobs:
       source_gcs_path: "gs://gce-image-archive/rhel"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "enterprise_linux/rhel_8_uefi.publish.json"
+      wf: "enterprise_linux/rhel_8.publish.json"
       environment: "prod"
 - name: publish-to-prod-rhel-7-4-sap
   plan:
