--- a/concourse/pipelines/develope-image-build.yaml
+++ b/concourse/pipelines/develope-image-build.yaml
@@ -128,6 +128,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/centos_7_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-centos-8-devcluster
   plan:
@@ -154,6 +155,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/centos_8_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-debian-9-devcluster
   plan:
@@ -180,6 +182,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/debian_9_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-debian-10-devcluster
   plan:
@@ -206,6 +209,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/debian_10_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-debian-proxy-devcluster
   plan:
@@ -232,6 +236,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/debian_proxy_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-ubuntu-1604-devcluster
   plan:
@@ -258,6 +263,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/ubuntu_1604_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 - name: build-ubuntu-1804-devcluster
   plan:
@@ -284,6 +290,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-dev.yaml
     vars:
       wf: "linux_devcluster/ubuntu_1804_devcluster.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 
 # Publish to dev stage
