--- a/concourse/tasks/daisy-build-images-dev.yaml
+++ b/concourse/tasks/daisy-build-images-dev.yaml
@@ -20,5 +20,6 @@ run:
   - -project=gce-image-builder
   - -zone=us-central1-c
   - -var:build_date=((build_date))
+  - -var:gcs_url=((gcs_url))
   - -compute_endpoint_override=https://www.googleapis.com/compute/beta/projects/
   - ./compute-image-tools/daisy_workflows/build-publish/((wf))
